force-app/main/default/objects/Activity/fields/Action_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Name__c</fullName>
    <label>Action Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>